k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fashion-backend
  namespace: fashion-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fashion-backend
  template:
    metadata:
      labels:
        app: fashion-backend
    spec:
      containers:
      - name: fashion-backend
        image: kikisrbinoska/fashion-backend:latest
        ports:
        - containerPort: 8080
