k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fashion-backend
  namespace: fashion-app
spec:
  type: ClusterIP
  selector:
    app: fashion-backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
