k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fashion-frontend
  namespace: fashion-app
spec:
  type: ClusterIP
  selector:
    app: fashion-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
