k8s/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: fashion-app
spec:
  ports:
  - port: 5432
  selector:
    app: postgres
  clusterIP: None
