k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fashion-ingress
  namespace: fashion-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: fashion-backend
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fashion-frontend
            port:
              number: 80
